[gd_scene load_steps=7 format=3 uid="uid://i12jx2k7s6ho"]

[ext_resource type="Script" path="res://scenes/score_panel.gd" id="1_uopmk"]
[ext_resource type="Script" path="res://scenes/panel_timer_label.gd" id="1_uv4wk"]
[ext_resource type="Script" path="res://scenes/panel_score_label.gd" id="2_t3pwj"]
[ext_resource type="Texture2D" uid="uid://do4rekagc4c0c" path="res://Cherries.png" id="3_6rl31"]

[sub_resource type="AtlasTexture" id="AtlasTexture_btvq6"]
atlas = ExtResource("3_6rl31")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kns1x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btvq6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ScorePanel" type="Panel"]
offset_left = 16.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 80.0
script = ExtResource("1_uopmk")

[node name="TopLeftControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelTimerLabel" type="Label" parent="TopLeftControl"]
offset_left = 112.0
offset_right = 176.0
offset_bottom = 64.0
text = "00:00"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("1_uv4wk")

[node name="PanelScoreLabel" type="Label" parent="TopLeftControl"]
offset_left = 8.0
offset_right = 56.0
offset_bottom = 64.0
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_t3pwj")

[node name="Node2D" type="Node2D" parent="TopLeftControl"]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TopLeftControl/Node2D"]
position = Vector2(72, 32)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_kns1x")

[connection signal="max_points_change" from="." to="TopLeftControl/PanelScoreLabel" method="_on_score_panel_max_points_change"]
[connection signal="points_change" from="." to="TopLeftControl/PanelScoreLabel" method="_on_score_panel_points_change"]
[connection signal="scene_time_elapsed_change" from="." to="TopLeftControl/PanelTimerLabel" method="_on_score_panel_scene_time_elapsed_change"]
